atlas/main/default/objects/Load__c/Load__c.object-meta.xml
<CustomObject>
    <label>Load</label>
    <nameField>
        <displayFormat>LD-{00000}</displayFormat>
        <label>Load ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>