atlas/main/default/objects/Load__c/fields/Agreed_Rate__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Rate__c</fullName>
    <label>Agreed Rate</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>