atlas/main/default/objects/Load__c/fields/AI_Calling_Active__c.field-meta.xml
<CustomField>
    <fullName>AI_Calling_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AI Calling Active</label>
    <type>Checkbox</type>
</CustomField>