atlas/main/default/objects/Load__c/fields/Assigned_Agent__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Agent__c</fullName>
    <label>Assigned Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Loads</relationshipName>
    <type>Lookup</type>
</CustomField>