atlas/main/default/objects/Load__c/fields/Booked_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Booked_Carrier__c</fullName>
    <label>Booked Carrier</label>
    <referenceTo>Carrier__c</referenceTo>
    <relationshipLabel>Loads (Booked Carrier)</relationshipLabel>
    <relationshipName>Booked_Loads</relationshipName>
    <type>Lookup</type>
</CustomField>