atlas/main/default/objects/Load__c/fields/Destination_City__c.field-meta.xml
<CustomField>
    <fullName>Destination_City__c</fullName>
    <label>Destination City</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>