atlas/main/default/objects/Load__c/fields/Destination_State__c.field-meta.xml
<CustomField>
    <fullName>Destination_State__c</fullName>
    <label>Destination State</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>