atlas/main/default/objects/Load__c/fields/Destination_Zip__c.field-meta.xml
<CustomField>
    <fullName>Destination_Zip__c</fullName>
    <label>Destination ZIP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>