atlas/main/default/objects/Load__c/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <label>Equipment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Dry Van</fullName>
                <default>true</default>
                <label>Dry Van</label>
            </value>
            <value>
                <fullName>Refrigerated (Reefer)</fullName>
            </value>
            <value>
                <fullName>Flatbed</fullName>
            </value>
            <value>
                <fullName>Step Deck</fullName>
            </value>
            <value>
                <fullName>Lowboy</fullName>
            </value>
            <value>
                <fullName>Tanker</fullName>
            </value>
            <value>
                <fullName>Box Truck</fullName>
            </value>
            <value>
                <fullName>Hotshot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>