atlas/main/default/objects/Load__c/fields/Origin_City__c.field-meta.xml
<CustomField>
    <fullName>Origin_City__c</fullName>
    <label>Origin City</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>