atlas/main/default/objects/Load__c/fields/Origin_State__c.field-meta.xml
<CustomField>
    <fullName>Origin_State__c</fullName>
    <label>Origin State</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>