atlas/main/default/objects/Load__c/fields/Origin_Zip__c.field-meta.xml
<CustomField>
    <fullName>Origin_Zip__c</fullName>
    <label>Origin ZIP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>