atlas/main/default/objects/Load__c/fields/Target_Rate__c.field-meta.xml
<CustomField>
    <fullName>Target_Rate__c</fullName>
    <label>Target Rate</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>