atlas/main/default/objects/Load__c/fields/Weight_lbs__c.field-meta.xml
<CustomField>
    <fullName>Weight_lbs__c</fullName>
    <label>Weight (lbs)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>